# system

./: .gitignore  CMakeLists.txt  main.cpp
fpt_environment/: CMakeLists.txt  environ.cpp  environ.h
fpt_exec/: CMakeLists.txt  fpt_exec.cpp  fpt_exec.h
fpt_fork/: CMakeLists.txt  fptfork.cpp  fptfork.h
fpt_pipe/: CMakeLists.txt  fpt_pipe.cpp  fpt_pipe.h
fpt_socket/: CMakeLists.txt  fptsocket.cpp  fptsocket.h
fpt_waitpid/: CMakeLists.txt  fpt_waitpid.cpp  fpt_waitpid.h
